--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-scrollbar": "^3.1.0",
     "react-icons": "^5.2.1",
-    "redux": "^5.0.1",
     "react-redux": "^9.1.2",
-    "@reduxjs/toolkit": "^2.2.5"
+    "redux": "^5.0.1",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
